--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -3,7 +3,9 @@
 {% block content %}
     <link rel="stylesheet" type="text/css" href="{{ url_for( 'static', filename='styles/error.css')}}">
 
-    <p>Error 500</p>
-    <p>Server was down</p>
-    {% include '_error.html' %}
+    <div id="main">
+        <p id="error-code">Error 500</p>
+        <p id="about">Server was down</p>
+        {% include '_error.html' %}
+    </div>
 {% endblock %}
