--- a/app/templates/api.html
+++ b/app/templates/api.html
@@ -10,7 +10,7 @@
             <p id="code">
                 import requests<br>
                 url = 'something.com'<br>
-                short_url = requests.get('http://{{ address }}', params={'url': url}).content
+                short_url = requests.get('http://{{ address }}/api', params={'url': url}).content
             </p>
         </div>
         </p>
